# vigicrues

./: .gitignore  CHANGELOG.md  LICENSE  README.md  makefile  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
tests/: conftest.py  test_cli.py  test_client.py  test_client_search.py  test_discovery.py  test_vigicrues_get_observations.py  test_vigicrues_get_station_details.py  test_vigicrues_get_territories.py  test_vigicrues_get_troncon_stations.py  test_vigicrues_get_troncons.py
vigicrues/: __init__.py  cli.py  client.py  discovery.py  models.py  py.typed  vigicrues.py
