[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigicrues"
version = "0.1.0"
description = "Asynchronous Python client for the Vigicrues API (French flood monitoring service)"
authors = [
    { name = "Emmanuel Navarro", email = "enavarro222@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "aioresponses>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/enavarro222/vigicrues"
Repository = "https://github.com/enavarro222/vigicrues"
Documentation = "https://github.com/enavarro222/vigicrues"
Issues = "https://github.com/enavarro222/vigicrues/issues"

[project.scripts]
vigicrues = "vigicrues.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["vigicrues"]

[tool.hatch.build.targets.sdist]
packages = ["vigicrues"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
